@@ -2,6 +2,9 @@ choose-mirror (1.02) UNRELEASED; urgency=low
 
   * Kenshi Muto
     - Mark one templates string for translation.
+  * Joey Hess
+    - Set proxy env variable without subjecting the value to shell
+      mangling. Closes: #268158
 
  -- Kenshi Muto <kmuto@debian.org>  Mon, 23 Aug 2004 22:20:40 +0900
 
